--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-	"name": "@payfunc/template-library",
+	"name": "@payfunc/model-log",
 	"version": "0.0.0",
-	"description": "Template for NPM library",
+	"description": "Model library for Logs",
 	"author": "PayFunc",
 	"license": "MIT",
-	"repository": "https://github.com/payfunc/template-library",
+	"repository": "https://github.com/payfunc/model-log",
 	"bugs": {
-		"url": "https://github.com/payfunc/template-library/issues"
+		"url": "https://github.com/payfunc/model-log/issues"
 	},
-	"homepage": "https://payfunc.com/open-source/template-library",
 	"private": false,
 	"main": "dist/index.js",
 	"typings": "dist/index.d.ts",
@@ -54,7 +53,10 @@
 		"prepare": "npm run build",
 		"clean": "rm -rf dist node_modules coverage"
 	},
-	"dependencies": {},
+	"dependencies": {
+		"authly": "^0.2.3",
+		"isoly": "0.0.29"
+	},
 	"devDependencies": {
 		"@babel/core": "^7.11.0",
 		"@types/jest": "^26.0.14",
